[gd_scene load_steps=6 format=3 uid="uid://bgobkdf567vqd"]

[ext_resource type="Script" uid="uid://c8p8lohlf28mx" path="res://src/root.gd" id="1_4l2ve"]
[ext_resource type="PackedScene" uid="uid://dd2s7o730xk4o" path="res://src/ui/dig_ui.tscn" id="1_pribe"]
[ext_resource type="PackedScene" uid="uid://cxd7o0igf2h0q" path="res://src/ui/ingame_ui.tscn" id="2_4l2ve"]
[ext_resource type="PackedScene" uid="uid://dqn1fthxlr67x" path="res://src/ui/level_select_ui.tscn" id="4_ri26b"]
[ext_resource type="PackedScene" uid="uid://7we2yqst0vgd" path="res://src/ui/end_ui.tscn" id="5_ipfp8"]

[node name="Root" type="Node"]
script = ExtResource("1_4l2ve")

[node name="DigUi" parent="." instance=ExtResource("1_pribe")]
visible = false

[node name="IngameMenu" parent="." instance=ExtResource("2_4l2ve")]
visible = false

[node name="LevelSelectUi" parent="." instance=ExtResource("4_ri26b")]
visible = false

[node name="EndUi" parent="." instance=ExtResource("5_ipfp8")]
visible = false
